# universal-ai-assistant

./: .gitignore  README.md  dif.md  package-lock.json  txt.md
backend/: Cargo.toml  backend.did  lib.rs
frontend/: index.css  index.html  package.json
frontend/src/: App.jsx  main.jsx  main_clean.jsx
frontend/src/components/: CapabilitiesSection.jsx  ChatInterface.jsx  ConsentLinks.jsx  EnhancedChatInterface.jsx  Footer.jsx  Header.jsx  MemoryDashboard.jsx  MilestoneCapsules.jsx  MobileMenuBar.jsx  Navigation.jsx  ProjectShippingCoach.jsx  Sidebar.jsx  SmartRoutines.jsx  TechSpecs.jsx  WCHLCoach.jsx  WalletNav.jsx  WelcomeHero.jsx  WelcomePage.jsx
frontend/src/styles/: enhanced-chat.css  main-layout.css  mobile-menu.css  sidebar.css  wchl-coach.css
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
