[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Universal AI Assistant backend canister for Internet Computer"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ICP-native dependencies
ic-ledger-types = "0.10"
ic-management-canister-types = "0.3.2"
base64 = "0.21"
sha2 = "0.10"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"